--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 
 <h1>Seja bem vindo a primeira atividade</h1>
-<p>Me chamo Paulo Henriuqe.</p>
-<p>Estou participando do programa Talento Tech</p>
+<p>Me chamo Paulo Henrique.</p>
+<p>Estou participando do programa Talento Tech.</p>
 
 </body>
 </html>
